[package]
name = "rusducer"
version = "0.1.0"
authors = ["Fabricio Dematte <fabriciodematte7p@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_yaml = "0.8.17"
xdg = "2.2.0"
